deploy/argo-watchface/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchface-api
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/name: watchface-api
  template:
    metadata:
      labels:
        kubernetes.io/name: watchface-api
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports: 
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              memory: "20Mi"

        - name: watchface-api
          image: ilaverlin/watchcluster-api:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              memory: 200Mi

      volumes:
        - name: nginx-config
          configMap:
            name: watchface-nginx
