deploy/argo-watchface/base/deployment-dbsink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchface-dbsink
  labels:
    kubernetes.io/name: watchface-dbsink
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/name: watchface-dbsink
  template:
    metadata:
      labels:
        kubernetes.io/name: watchface-dbsink
    spec:
      containers:
        - name: watchface-dbsink
          image: ilaverlin/watchcluster-dbsink:latest
          startupProbe:
            httpGet:
              path: /health/ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: 50Mi
