deploy/argo-watchface/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: watchface-api

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(``) && PathPrefix(`/watch-api`)
      kind: Rule
      services:
        - name: watchface-api
          port: 8080
  tls:
    secretName: watchface-tls
